<resources>
    <string name="type_control_center" translatable="false">Control Center </string>
    <string name="type_mi_control" translatable="false">Control Center</string>
    <string name="type_mi_shade" translatable="false">Notification Shade</string>
    <string name="accessibility_service_description">This service allows to use the private settings panel by swiping down from the top edge of the screen. The data collected from this service is not saved, collected or used in any way. The uses are outlined below. This service does not send your data to 3rd parties over the internet.
    \n\nPermission:
    \n\n- Track your actions: Get feedback from the system when the top edge of the screen is touched to activate the settings panel.
    \n\n- Get window info: Necessary to automatically hit some settings after the user set them to enable and disable them in the application\'s provided interface.</string>
    <string name="screen_timeout">Screen\nTimeout</string>
    <string name="text_screen_timeout">Screen timeout</string>
    <string name="timeout_15s">15 seconds</string>
    <string name="timeout_30s">30 seconds</string>
    <string name="timeout_1m">1 minute</string>
    <string name="timeout_2m">2 minute</string>
    <string name="timeout_5m">5 minute</string>
    <string name="timeout_10m">10 minute</string>
    <string name="timeout_30m">30 minute</string>
    <string name="audio_system">System</string>
    <string name="audio_music">Music</string>
    <string name="audio_ringtone">Ringtone</string>
    <string name="no_sim">No Sim</string>
    <string name="text_add_organize_control">Add and organize additional controls to appear in %s. The maximum is 11 controls.</string>
    <string name="maximum_11_control">The maximum is 11 controls</string>
    <string name="waiting">Waiting…</string>
    <string name="wifi">Wifi</string>
    <string name="data">Data</string>
    <string name="airplane">Airplane</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="sync">Sync</string>
    <string name="location">Location</string>
    <string name="setting">Setting</string>
    <string name="select_background">Select Background</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="please_rate_5_stars_to_support_the_developer">Rate Controller Quicky</string>
    <string name="color">Color</string>
    <string name="position">Position</string>
    <string name="top">Top</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="drag_edge">Drag Edge screen handle to change the position</string>
    <string name="advanced_options">Advanced options</string>
    <string name="size">Size</string>
    <string name="color_control_center">Color Control Center</string>
    <string name="color_notification">Color Notification</string>
    <string name="support">Support</string>
    <string name="handle_settings">Handle Settings</string>
    <string name="more_controls">MORE CONTROLS</string>
    <string name="include">INCLUDE</string>
    <string name="include_control">INCLUDED CONTROLS</string>
    <string name="no_event_tomorrow_widget">You have no events\nscheduled for tomorrow</string>
    <string name="no_event_today_widget">No events</string>
    <string name="acces_permission_calendar">Click to access permission Calendar</string>
    <string name="permission_recent">Click to activate</string>
    <string name="api_nho_hon_hai_lam">This function is only for android 5.0 and above</string>
    <string name="vibrator">Vibrator</string>
    <string name="default_background">Default</string>
    <string name="transparent_background">Transparent</string>
    <string name="current_wallpaper_background">Current Wallpaper</string>
    <string name="screen_blur_background">Screen Blur Behind</string>
    <string name="background">Background</string>
    <string name="permission">Permission</string>
    <string name="mess_request_permission">You need to allow some permissions later so that the application can work</string>
    <string name="more_noty">More notifications</string>
    <string name="view_noty">View</string>
    <string name="view_manager">Manager</string>
    <string name="clear_all_noty">Delete Group</string>
    <string name="text_clear">Clear</string>
    <string name="delete_noty">Delete</string>
    <string name="hide_group">Hide</string>
    <string name="recording">Recording..</string>
    <string name="stop_record">STOP</string>
    <string name="stopping">STOPPING…</string>
    <string name="click_to_stop_record_screen">Click to stop record screen</string>
    <string name="processing">Processing…</string>
    <string name="mess_stop_recording_video">Recording video screen. Open control center will stop record. Do you want to stop?You can stop video in \"Notification Center\" or open \"Control Center\"</string>
    <string name="mess_permisstion_write_setting">This app need this permission to change setting</string>
    <string name="app_suggestions_lowercase">App suggestions</string>
    <string name="app_suggestions">APP SUGGESTIONS</string>
    <string name="access_permission_calendar">Access permission calendar</string>
    <string name="access_permission_app_recent">Click to activate app suggest</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show less</string>
    <string name="up_next">UP NEXT</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="notification_center">Notification Center</string>
    <string name="style">STYLE</string>
    <string name="enable_notification">Enable Notification Center</string>
    <string name="enable_control_center">Enable Control Center</string>
    <string name="ok">OK</string>
    <string name="save">Save successfully </string>
    <string name="please_waiting_load_config">Please wait to loading configuration…</string>
    <string name="detail_splash">Permission</string>
    <string name="detail_pre">ALLOW PERMISSION</string>
    <string name="noty_access">Notification access</string>
    <string name="detail_noti_access">Access your notification</string>
    <string name="accessibility">Accessibility</string>
    <string name="detail_accessibility">Allow notification display</string>
    <string name="appear_on_top">Appear on top</string>
    <string name="detail_appear_on_top">Shows things on top of other apps</string>
    <string name="text_skip">Skip</string>
    <string name="text_detail_splash">NEEDS YOUR PERMISSION TO WORK</string>
    <string name="text_allow">Allow</string>
    <string name="text_noti">Slide to unlock</string>
    <string name="demo">Demo</string>
    <string name="running">Running</string>
    <string name="text_enable">Enable</string>
    <string name="title_choose_type_noty">APPEARANCE</string>
    <string name="text_cb_notification">Notifications</string>
    <string name="text_cb_control">Controls</string>
    <string name="menu_customize_control">Customize Control</string>
    <string name="menu_layout">Layout</string>
    <string name="menu_color">Color</string>
    <string name="menu_color_noty">Color Noti</string>
    <string name="menu_color_control">Color Controls</string>
    <string name="menu_edge_trigger">Edge Triggers</string>
    <string name="choose_music_player">Choose Music Player</string>
    <string name="menu_rate">Rate App</string>
    <string name="text_control_center">Control Center</string>
    <string name="text_phone_speak">Phone speaker</string>
    <string name="text_headset">Headset</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="text_sound">Sound</string>
    <string name="text_vibrate">Vibrate</string>
    <string name="text_silent">Silent</string>
    <string name="text_snoozed">Snoozed</string>
    <string name="text_snoozed_for">Snoozed for</string>
    <string name="text_undo">UNDO</string>
    <string name="text_15_minutes">15 minutes</string>
    <string name="text_30_minutes">30 minutes</string>
    <string name="text_1_house">1 hours</string>
    <string name="text_1_day">1 day</string>
    <string name="text_light">Light</string>
    <string name="text_dark">Dark</string>
    <string name="text_vibrate_on_tap">Vibrate On Tap</string>
    <string name="text_swipe__up_to_open">Swipe up to open</string>
    <string name="text_show_edge">Show Notification edge triggers</string>
    <string name="text_detail_custom_shape">Custom icons shape </string>
    <string name="text_icons_shape">Icons Shape </string>
    <string name="text_custom_text">CUSTOM “Control Center” TEXT</string>
    <string name="text_date_time">Show Time And Date</string>
    <string name="text_edit_text">Edit Text</string>
    <string name="text_enable_section">Enable notification sections</string>
    <string name="text_detail_enable_section">With Silent notifications</string>
    <string name="text_close">Close</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_done">Done</string>
    <string name="text_off_noty">Turn off notification</string>
    <string name="text_available">Available toggles</string>
    <string name="text_add_toggle">Added toggles</string>
    <string name="text_alert">Alerting</string>
    <string name="text_slide">Silent</string>
    <string name="text_detail_add_toggle">Drag added toggles to rearrange them</string>
    <string name="text_detail_waning">Gets your attentionwith sound or vibration.</string>
    <string name="text_detail_alert">Helps you focus without sound or vibration.</string>
    <string name="text_apply">Apply</string>
    <string name="text_custom_text_show">Custom text show</string>
    <string name="text_title_setting" translatable="false">Inoty &amp; Icontrol </string>
    <string name="text_no_older_notification">No Older Notification</string>
    <string name="txt_ads_ledkeyboard">LED Keyboard - RGB Keyboard</string>
    <string name="go_back">Go back</string>
    <string name="open_system">Open System</string>
    <string name="no_data">No data</string>
    <string name="usage_data_access">Usage data access</string>
    <string name="allow_access">Allow access</string>
    <string name="this_application_uses_usage_data_access_permission_to_detect_an_application_is_opened_or_closed">This application uses USAGE DATA ACCESS permission to detect an application is opened or closed</string>
    <string name="auto_start">Auto Start</string>
    <string name="application_needs_your_permission_to_enable_autostart_setting_to_work_correctly_and_more_stability">To enable autostart setting to work correctly and more stability</string>
    <string name="set">set</string>
    <string name="a_note_on_privacy">A note on privacy</string>
    <string name="content_a_note_privacy">We do not collect any personal information through accessibility services.
        \n- We need Accessibility Permission to draw over phone\'s home screen and status bar.
    \n- We will not read your screen\'s sensitive data or any content.
    \n- For this app to function properly, we need the Accessibility Permission. Accessibility services are required to receive a response from the system when the top of the screen is touched to trigger the shade and to retrieve window content: Required for automatic clicking of some settings after the user chooses they want to toggle them in the app-provided interface.</string>
    <string name="agree">Agree</string>
    <string name="des_dialog_no_sim">Device no sim, you can go to setting to setup</string>
    <string name="my_customization">My Customization</string>
    <string name="start_customizing_the_control_center_to_save_here">Start customizing the control center to save here</string>
</resources>