<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_tab_top_edge"
            android:gravity="center"
            android:maxLines="2"
            android:paddingHorizontal="1dp"
            android:paddingVertical="12dp"
            android:text="@string/top"
            android:textSize="@dimen/text_17sp" />

        <TextView
            android:id="@+id/tvLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_tab_left_edge"
            android:gravity="center"
            android:paddingHorizontal="1dp"
            android:paddingVertical="12dp"
            android:text="@string/left"
            android:textSize="@dimen/text_17sp" />

        <TextView
            android:id="@+id/tvRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_tab_left_edge"
            android:gravity="center"
            android:paddingHorizontal="1dp"
            android:paddingVertical="12dp"
            android:text="@string/right"
            android:textSize="@dimen/text_17sp" />

        <TextView
            android:id="@+id/tvBottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_tab_bottom_edge"
            android:gravity="center"
            android:paddingHorizontal="1dp"
            android:paddingVertical="12dp"
            android:text="@string/bottom"
            android:textSize="@dimen/text_17sp" />

    </LinearLayout>

</layout>