<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rootDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#79000000"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/padding_16">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/viewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_vpg"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/padding_16">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_sim"
                android:textColor="@color/black"
                android:textSize="@dimen/text_19sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:text="@string/des_dialog_no_sim"
                android:textColor="@color/black"
                android:textSize="@dimen/text_15sp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />


            <TextView
                android:id="@+id/tvOpenSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/open_system"
                android:textColor="@color/color_green_icon"
                android:textSize="@dimen/text_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDes" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>
