<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layoutDirection="ltr"
        android:background="@drawable/custom_background_dialog_a_note_privacy"
        android:paddingHorizontal="19dp"
        android:paddingVertical="24dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/a_note_on_privacy"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textDirection="ltr"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textDirection="ltr"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/content_a_note_privacy"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/custom_background_tv_cancel"
            android:clickable="true"
            android:fontFamily="@font/sf_pro_text_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingVertical="8dp"
            android:text="@string/go_back"
            android:textDirection="ltr"
            android:textColor="#828282"
            android:textSize="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_boost"
            app:layout_constraintTop_toBottomOf="@id/tv_content" />


        <TextView
            android:id="@+id/tv_boost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/custom_background_go_to_setting_"
            android:clickable="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/sf_pro_text_regular"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:includeFontPadding="false"
            android:text="@string/agree"
            android:textDirection="ltr"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:layout_constraintLeft_toRightOf="@id/tv_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>