<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/custom_background_choose_time"
            android:paddingHorizontal="16dp"
            android:layoutDirection="ltr"
            android:paddingVertical="24dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission"
                android:textColor="#1a2725"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_auto_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/auto_start"
                android:textDirection="ltr"
                android:textColor="#1a2725"
                android:textSize="15sp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_content_auto_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/application_needs_your_permission_to_enable_autostart_setting_to_work_correctly_and_more_stability"
                android:textColor="#1a2725"
                android:textSize="13sp"
                android:textDirection="ltr"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/guiline_vertical"
                app:layout_constraintTop_toBottomOf="@id/tv_auto_start" />


            <TextView
                android:id="@+id/tv_set_auto_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:background="@drawable/custom_background_go_to_settings"
                android:gravity="center"
                android:maxLines="1"
                android:paddingStart="6dp"
                android:paddingTop="5dp"
                android:paddingEnd="6dp"
                android:paddingBottom="5dp"
                android:text="@string/set"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/tv_content_auto_start"
                app:layout_constraintLeft_toRightOf="@id/guiline_vertical"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_auto_start" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guiline_vertical"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>