<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:clickable="true"
        android:layoutDirection="ltr"
        android:paddingTop="@dimen/padding_20dp">

        <View
            android:id="@+id/viewBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_boder_top_white" />

        <TextView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/sf_pro_text_regular"
            android:padding="8dp"
            android:text="@string/text_cancel"
            android:textColor="@color/text_splash"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintRight_toRightOf="@+id/viewBg"
            app:layout_constraintTop_toTopOf="@+id/title" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sf_pro_text_semi_bold"
            android:text="@string/text_icons_shape"
            android:textColor="@color/black_background_80"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_boder_search"
            android:drawableStart="@drawable/ic_search_icon"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:layoutDirection="ltr"
            android:paddingStart="10dp"
            android:textDirection="ltr"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <View
            android:id="@+id/lineTop"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/background_line"
            app:layout_constraintTop_toBottomOf="@+id/edtSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rccIcon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/text_detail_splash"
            android:layoutDirection="ltr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineTop" />

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39.00dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/no_data"
            android:textSize="17sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rccIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
