<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_background_choose_time">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/usage_data_access"
                android:gravity="center"
                android:textColor="#212740"
                android:textSize="20sp"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/this_application_uses_usage_data_access_permission_to_detect_an_application_is_opened_or_closed"
                android:gravity="center"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_go_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/custom_background_go_to_settings"
                android:fontFamily="@font/sf_pro_display_medium"
                android:paddingStart="35dp"
                android:paddingTop="12dp"
                android:paddingEnd="35dp"
                android:paddingBottom="11dp"
                android:text="@string/allow_access"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>
